k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: realchat
spec:
  selector:
    app: mongo
  ports:
    - port: 27017
      targetPort: 27017
  clusterIP: None
---
apiVersion: v1
kind: Service
metadata:
  name: realchat-server
  namespace: realchat
spec:
  selector:
    app: realchat-server
  ports:
    - port: 5000
      targetPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: realchat-client
  namespace: realchat
spec:
  type: LoadBalancer
  selector:
    app: realchat-client
  ports:
    - port: 80          #public port
      targetPort: 80  #container port
